Working setup on Gnome 3, buggy on MATE, Xfce, LXDE

--- a/xorg.conf.d/01-layout.conf
+++ b/xorg.conf.d/01-layout.conf
@@ -1,6 +1,6 @@
 Section "ServerLayout"
     Identifier     "Layout0"
     Screen      0  "Screen0" 0 0
-    Screen      1  "Ovr-Screen" Below "Screen0"
-    Option         "Xinerama" "0"
+    Screen      1  "Ovr-Screen" RightOf "Screen0"
+    Option         "Xinerama" "0" # Broken after nvidia 313 driver
 EndSection
