--- a/xorg.conf.d/30-monitor.conf
+++ b/xorg.conf.d/30-monitor.conf
@@ -1,17 +1,16 @@
-Section "Monitor"
-    Identifier     "Monitor0"
-    VendorName     "LG Electronics"
-    ModelName      "E2240"
-    Option         "DPMS"
-EndSection
-
 Section "Device"
     Identifier     "Device0"
-    Driver         "nvidia"
-    VendorName     "NVIDIA Corporation"
-    BoardName      "GeForce GTX 660"
+    Driver         "nvidia" #fglrx for AMD
     BusID          "PCI:1:0:0"
     Screen          0
+EndSection
+
+Section "Monitor"
+    # HorizSync source: edid, VertRefresh source: edid
+    Identifier     "Monitor0"
+    HorizSync       30.0 - 83.0
+    VertRefresh     56.0 - 76.0
+    Option         "DPMS"
 EndSection
 
 Section "Screen"
@@ -20,11 +19,15 @@ Section "Screen"
     Monitor        "Monitor0"
     DefaultDepth    24
     Option         "Stereo" "0"
-    Option         "metamodes" "DVI-I-1: nvidia-auto-select +0+0, DVI-D-0: nvidia-auto-select +1920+0"
+    #Custom configuration for my multiple displays
+    #You should probably change this for your setup
+    #Option         "nvidiaXineramaInfoOrder" "DFP-2"
+    #Option         "metamodes" "DP-0: nvidia-auto-select +1920+0, DP-2: nvidia-auto-select +0+0"
     Option         "SLI" "Off"
     Option         "MultiGPU" "Off"
     Option         "BaseMosaic" "off"
     SubSection     "Display"
         Depth       24
+	      Modes	     "1920x1080"
     EndSubSection
 EndSection
