--- a/xorg.conf.d/50-ovr.conf
+++ b/xorg.conf.d/50-ovr.conf
@@ -1,15 +1,15 @@
 Section "Monitor"
     Identifier     "Ovr-Monitor"
     VendorName     "Oculus"
-    ModelName      "OVR Rift DK2"
+    ModelName      "OVR Oculus Rift DK2"
+    HorizSync       30.0 - 150.0
+    VertRefresh     56.0 - 77.0
     Option         "DPMS"
 EndSection
 
 Section "Device"
     Identifier     "Device1"
-    Driver         "nvidia"
-    VendorName     "NVIDIA Corporation"
-    BoardName      "GeForce GTX 660"
+    Driver         "nvidia" #fglrx for AMD
     BusID          "PCI:1:0:0"
     Screen          1
 EndSection
@@ -20,7 +20,7 @@ Section "Screen"
     Monitor        "Ovr-Monitor"
     DefaultDepth    24
     Option         "Stereo" "0"
-    Option         "metamodes" "HDMI-0: nvidia-auto-select +0+0"
+    #Option         "metamodes" "HDMI-0: nvidia-auto-select +0+0"
     Option         "SLI" "Off"
     Option         "MultiGPU" "Off"
     Option         "BaseMosaic" "off"
